--- a/prologin/prologin/templates/prologin/main-menu.html
+++ b/prologin/prologin/templates/prologin/main-menu.html
@@ -21,7 +21,7 @@
       <li><a href="{% url 'admin:index' %}"><i class="fa fa-star"></i> {% trans "Administration" %}</a></li>
       {% endif %}
       <li class="divider"></li>
-      <li><a href="{% url 'users:logout' %}"><i class="fa fa-power-off"></i> {% trans "Sign out" %}</a></li>
+      <li><form method="post" action="{% url 'users:logout' %}">{% csrf_token %}<button type="submit"><i class="fa fa-power-off"></i> {% trans "Sign out" %}</button></form></li>
     </ul>
   </li>
   {% else %}
